<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/news_from"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="31dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="200dp"
        android:text="@string/category"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radio_group_country"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="56dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:checkedButton="@id/radio_brazil">

        <RadioButton
            android:id="@+id/radio_brazil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/brazil" />

        <RadioButton
            android:id="@+id/radio_united_states"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/united_states_of_america" />

        <RadioButton
            android:id="@+id/radio_germany"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/germany" />

        <RadioButton
            android:id="@+id/radio_italy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/italy" />
    </RadioGroup>

    <RadioGroup
        android:id="@+id/radio_group_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="250dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:checkedButton="@id/radio_technology">

        <RadioButton
            android:id="@+id/radio_technology"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/technology" />

        <RadioButton
            android:id="@+id/radio_cities"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cities" />

        <RadioButton
            android:id="@+id/radio_business"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/business" />
    </RadioGroup>

    <Button
        android:id="@+id/button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/save_changes_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radio_group_category" />

</android.support.constraint.ConstraintLayout>